# insightdocketv2

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  index.html  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.deepeval/: .deepeval_telemetry.txt  .latest_run_full.json  .latest_test_run.json  .temp-deepeval-cache.json  .temp_test_run_data.json
.github/workflows/: ci.yml
app/: config.py  dependencies.py  main.py
app/api/: documents.py  explain.py  health.py  ingest.py  metrics.py  query.py
app/core/: metrics_store.py  rate_limiter.py  sanitiser.py  security.py
app/db/: models.py  mongodb.py  mysql.py
app/generation/: generator.py  hallucination_filter.py  prompt_templates.py
app/ingestion/: embedder.py  parser.py  pipeline.py  storage.py  summariser.py
app/observability/: audit_logger.py  langsmith_tracer.py
app/retrieval/: confidence.py  fusion.py  reranker.py  text_search.py  vector_search.py
scripts/: init_mysql.sql  seed_api_key.py
t1/: conftest.py  test_confidence.py  test_fusion.py  test_hallucination_filter.py  test_health_api.py  test_ingest_api.py  test_query_api.py  test_rate_limiter.py  test_sanitiser.py  test_storage.py
tests/: test_rag_evaluation.py
