[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightdocket"
version = "1.0.0"
description = "Multimodal RAG PDF QA System with MongoDB hybrid search and Gemini Vision"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    "aiomysql>=0.3.2",
    "asgi-lifespan==2.1.0",
    "bleach>=6.4.0",
    "cryptography>=48.0.1",
    "deepeval==4.0.6",
    "fakeredis==2.26.1",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.3.8",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langsmith>=0.8.15",
    "mongomock-motor==0.0.34",
    "motor>=3.7.1",
    "mypy==1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "ruff==0.8.4",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "torch>=2.12.0",
    "types-bleach==6.2.0.20241123",
    "types-passlib==1.7.7.20240819",
    "unstructured[pdf]>=0.23.1",
    "uvicorn[standard]>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "deepeval>=4.0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=70"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
